<resources>
    <string name="app_name">MyApplication</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyACnr4sERwrbWWJOto6DNw6ZaRCf7WSiUM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    /////////////////////////////////////////////////////////////////////////

    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>


    <style name="ErrorTextAppearance" parent="TextAppearance.AppCompat">
        <item name="android:textColor">@android:color/holo_orange_dark</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textStyle">bold|italic</item>
    </style>

    <style name="HelperTextAppearance" parent="TextAppearance.AppCompat">
        <item name="android:textColor">@android:color/holo_green_dark</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textStyle">bold|italic</item>
    </style>

    <style name="HintTextAppearance" parent="TextAppearance.AppCompat">
        <item name="android:textColor">@android:color/holo_green_dark</item>
        <item name="android:textSize">10sp</item>
    </style>

    <style name="EditTextThemeOverlay" parent="ThemeOverlay.AppCompat">
        <item name="colorAccent">@android:color/holo_blue_light</item>
    </style>

</resources>
